# dataloom-py

./: .gitignore  Changelog.md  LICENSE  README.md  code.txt  dataloom.sql  hello.sql  hi.db  logs.sql  playground.py  pyproject.toml  requirements.txt  scripts.py  setup.py  sqlite-logs.sql  template.html  todo.txt
.github/workflows/: ci.yml  packacke.yml  publish.yml
dataloom/: __init__.py  keys.py
dataloom/columns/: __init__.py
dataloom/conn/: __init__.py
dataloom/constants/: __init__.py
dataloom/db/: __init__.py
dataloom/decorators/: __init__.py
dataloom/exceptions/: __init__.py
dataloom/loom/: __init__.py  delete.py  insert.py  inspect.py  interfaces.py  math.py  qb.py  query.py  sql.py  subqueries.py  update.py
dataloom/model/: __init__.py  column.py  model.py  statements.py
dataloom/statements/: __init__.py  statements.py
dataloom/tests/: test_connection.py  test_create_table.py  test_delete.py  test_insert.py  test_query.py  test_update.py
dataloom/tests/mysql/: test_aggregation_mysql.py  test_alter_tables_mysql.py  test_connection_mysql.py  test_connection_options_mysql.py  test_connection_uri_mysql.py  test_create_tables_mysql.py  test_delete_mysql.py  test_eager_loading_mysql.py  test_experimental_decorators_mysql.py  test_insert_mysql.py  test_inspect_table_mysql.py  test_operators_mysql.py  test_qb_mysql.py  test_query_msql.py  test_update_mysql.py  test_utils_fns_mysql.py
dataloom/tests/postgres/: test_aggregation_pg.py  (+15 more)
dataloom/types/: __init__.py
dataloom/utils/: __init__.py  aggregations.py  alter_table.py  create_table.py  helpers.py  logger.py  loom.py  table.py  tables.py
docs/source/: conf.py  features.rst  index.rst  installation.rst  usage.rst
orm/: keys.py
orm/db/: __init__.py
orm/exceptions/: __init__.py
orm/model/: column.py  model.py  statements.py
orm/tests/: test_connection.py  test_create_table.py  test_delete.py  test_insert.py  test_query.py  test_update.py
tests/: test_connection.py
(+61 files in other folders)
